rust/geometry/tests/snapshots/annex_e__basic__csg-primitive.snap
---
source: rust/geometry/tests/geometry_correctness_harness.rs
description: tests/models/buildingsmart/annex_e/basic-geometric-shape/csg-primitive.ifc
---
parse_ok: true
products_attempted: 4
products_non_empty: 1
process_errors: 3
total_triangles: 12
total_vertices: 24
spike_triangles: 0
total_surface_area: 10.000
bbox_min: [0.500, -0.500, 0.000]
bbox_max: [1.500, 0.500, 2.000]
types_seen:
  IFCBUILDINGELEMENTPROXY: 1
